[project]
name = "paygraph"
version = "0.1.0"
description = "Open-source spend governance for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pydantic", "httpx"]

[project.optional-dependencies]
langgraph = ["langchain-core>=0.2"]
crewai = ["crewai>=0.80", "langchain-core>=0.2"]
live = ["langgraph>=0.2", "langchain-anthropic>=0.2", "langchain-openai>=0.2"]
x402 = ["x402[httpx,evm,svm]"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
paygraph = "paygraph.cli:main"

[project.urls]
Homepage = "https://paygraph.dev"
Repository = "https://github.com/Allenbrd/paygraph"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"